# ChangeLog for app-text/libwpd
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/libwpd/ChangeLog,v 1.4 2004/03/13 01:09:15 foser Exp $

*libwpd-0.7.1 (13 Mar 2004)

  13 Mar 2004; foser <foser@gentoo.org> libwpd-0.7.1.ebuild :
  Fresh release, needed by abi 2.0.5 and mg notified us once again

  08 Mar 2004; <augustus@gentoo.org> libwpd-0.6.6.ebuild:
  Added ~amd64 keyword.

*libwpd-0.6.6 (25 Nov 2003)

  25 Nov 2003; foser <foser@gentoo.org> libwpd-0.6.6.ebuild :
  New release, requested in #33703

*libwpd-0.5.0 (24 Aug 2003)

  24 Aug 2003; foser <foser@gentoo.org> libwpd-0.5.0.ebuild, ChangeLog, metadat.xml :
  Initial commit, ebuild adapted from the one submitted by mg <markgilbert@hotpop.com> in #23557
  Added to gnome herd for now, because abiword is the only app using it atm