@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/libwpd/Attic/libwpd-0.7.1.ebuild,v 1.1 2004/03/13 01:09:15 foser Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/libwpd/Attic/libwpd-0.7.1.ebuild,v 1.2 2004/04/25 11:52:16 dholm Exp $
 
 DESCRIPTION="WordPerfect Document import/export library"
 HOMEPAGE="http://libwpd.sf.net"
@@ -8,7 +8,7 @@ SRC_URI="mirror://sourceforge/${PN}/${P}.tar.gz"
 
 LICENSE="LGPL-2.1"
 SLOT="0"
-KEYWORDS="~x86 ~amd64"
+KEYWORDS="~x86 ~amd64 ~ppc"
 IUSE=""
 
 RDEPEND=">=dev-libs/glib-2
