@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-tcltk/snack/Attic/snack-2.2.4.ebuild,v 1.1 2004/04/04 22:28:40 zx Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-tcltk/snack/Attic/snack-2.2.4.ebuild,v 1.2 2004/04/25 11:50:31 dholm Exp $
 
 IUSE="alsa oggvorbis"
 
@@ -9,7 +9,7 @@ HOMEPAGE="http://www.speech.kth.se/snack/"
 SRC_URI="http://www.speech.kth.se/~kare/${PN}${PV}.tar.gz"
 
 LICENSE="BSD"
-KEYWORDS="~x86"
+KEYWORDS="~x86 ~ppc"
 SLOT="0"
 
 DEPEND=">dev-lang/tcl-8.4.3
