@@ -1,6 +1,9 @@
 # ChangeLog for dev-tcltk/snack
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-tcltk/snack/ChangeLog,v 1.3 2004/04/04 22:28:40 zx Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-tcltk/snack/ChangeLog,v 1.4 2004/04/25 11:50:31 dholm Exp $
+
+  25 Apr 2004; David Holm <dholm@gentoo.org> snack-2.2.4.ebuild:
+  Added to ~ppc.
 
 *snack-2.2.4 (04 Apr 2004)
 
