@@ -1,6 +1,9 @@
 # ChangeLog for app-text/libwpd
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/libwpd/ChangeLog,v 1.4 2004/03/13 01:09:15 foser Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/libwpd/ChangeLog,v 1.5 2004/04/25 11:52:16 dholm Exp $
+
+  25 Apr 2004; David Holm <dholm@gentoo.org> libwpd-0.7.1.ebuild:
+  Added to ~ppc.
 
 *libwpd-0.7.1 (13 Mar 2004)
 
